apps/discovery_streams/k8s/1-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cota-streaming-consumer
  labels:
    app: cota-streaming-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cota-streaming-consumer
  template:
    metadata:
      labels:
        app: cota-streaming-consumer
    spec:
      serviceAccountName: clusterlib
      imagePullSecrets:
      - name: regcred
      containers:
      - name: cota-streaming-consumer
        image: 199837183662.dkr.ecr.us-east-2.amazonaws.com/scos/cota-streaming-consumer:${VERSION}
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: 100m
          requests:
            memory: 512Mi
            cpu: 100m
