apps/discovery_streams/k8s/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cota-streaming-consumer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  selector:
    app: cota-streaming-consumer
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
    nodePort: 30070
  type: LoadBalancer
