apps/discovery_streams/k8s/3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cota-streaming-consumer
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: ${INGRESS_SCHEME}
    alb.ingress.kubernetes.io/subnets: ${SUBNETS}
    alb.ingress.kubernetes.io/security-groups: ${SECURITY_GROUPS}
    alb.ingress.kubernetes.io/tags: scos.delete.on.teardown=true
    alb.ingress.kubernetes.io/healthcheck-path: /socket/healthcheck
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
spec:
  rules:
  - host: socket.${DNS_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: cota-streaming-consumer
          servicePort: 80
  - host: streaming.${DNS_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: cota-streaming-consumer
          servicePort: 80
